--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -6,7 +6,7 @@ on:
       py_version:
         description: 'Python version to use'
         required: true
-        default: '3.8'
+        default: '3.9'
 
 jobs:
   build:
@@ -14,13 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            pyinstaller-extra-args: ""
-          - os: macos-latest
-            pyinstaller-extra-args: ""
-          - os: windows-latest
-            pyinstaller-extra-args: ""
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -38,11 +32,26 @@ jobs:
 
     - name: Run PyInstaller
       run: |
-        pyinstaller --onefile your_script.py ${{ matrix.pyinstaller-extra-args }}
-      # Replace 'your_script.py' with the entry point of your application
+        pyinstaller -n vigilant--onefile main.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: executable-${{ matrix.os }}
         path: dist/
+
+    - name: Set up GitHub CLI
+      uses: actions/setup-gh-cli@v1
+
+    - name: Create GitHub Release
+      id: create_release
+      run: |
+        gh release create ${{ github.sha }} --generate-notes --title "Build ${{ github.sha }}"
+
+    - name: Upload executable as release asset
+      run: |
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+          gh release upload ${{ github.sha }} dist/vigilant.exe
+        else
+          gh release upload ${{ github.sha }} dist/vigilant
+        fi
