--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -2,78 +2,19 @@ name: Build with PyInstaller
 
 on:
   workflow_dispatch:
-    inputs:
-      py_version:
-        description: 'Python version to use'
-        required: true
-        default: '3.9'
 
 jobs:
-  build:
+  pyinstaller-build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ github.event.inputs.py_version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller
-        pip install -r requirements.txt
-
-    - name: Run PyInstaller
-      run: |
-        pyinstaller -n vigilant--onefile main.py
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: executable-${{ matrix.os }}
-        path: dist/
-
-    - name: Install GitHub CLI on Linux or macOS
-      if: runner.os != 'Windows'
-      run: |
-        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
-        sudo apt-add-repository https://cli.github.com/packages
-        sudo apt-get update
-        sudo apt-get install gh -y
-
-    - name: Install GitHub CLI on Windows
-      if: runner.os == 'Windows'
-      run: |
-        choco install gh
-
-    - name: Authenticate GitHub CLI
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        gh auth login --with-token <<< "$GITHUB_TOKEN"
-
-    - name: Create GitHub Release
-      id: create_release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        gh release create ${{ github.sha }} --generate-notes --title "${{ github.sha }}"
-
-    - name: Upload executable as release asset
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-          gh release upload ${{ github.sha }} dist/vigilant-windows-${{ github.sha }}.exe
-        elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-          gh release upload ${{ github.sha }} dist/vigilant-macos-${{ github.sha }}
-        else
-          gh release upload ${{ github.sha }} dist/vigilant-linux-${{ github.sha }}
-        fi
+      - name: Create Executable
+        uses: sayyid5416/pyinstaller@v1
+        with:
+          python_ver: '3.9'
+          spec: 'main.spec'
+          requirements: 'requirements.txt'
+          upload_exe_with_name: "vigilant-${{ matrix.os }}-${{ github.sha }}"
+          options: "--onefile, --name 'vigilant-${{ matrix.os }}-${{ github.sha }}'"
