fix setup gh cli

--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -2,19 +2,109 @@ name: Build with PyInstaller
 
 on:
   workflow_dispatch:
+    inputs:
+      py_version:
+        description: 'Python version to use'
+        required: true
+        default: '3.8'
+      release_version:
+        description: 'Release version (e.g., v1.0.0)'
+        required: true
+        default: 'v0.0.1-alpha'
 
 jobs:
-  pyinstaller-build:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      - name: Create Executable
-        uses: sayyid5416/pyinstaller@v1
-        with:
-          python_ver: '3.9'
-          spec: 'main.spec'
-          requirements: 'requirements.txt'
-          upload_exe_with_name: "vigilant-${{ matrix.os }}-${{ github.sha }}"
-          options: "--onefile, --name 'vigilant-${{ matrix.os }}-${{ github.sha }}'"
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ github.event.inputs.py_version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+        pip install -r requirements.txt
+
+    - name: Run PyInstaller
+      run: |
+        pyinstaller --onefile main.py -n vigilant
+
+    - name: Archive executable
+      if: runner.os == 'Windows'
+      run: |
+        mv dist/vigilant.exe dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}.exe
+      else:
+        mv dist/vigilant dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: executable-${{ matrix.os }}
+        path: dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}*
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: executable-ubuntu-latest
+        path: ./dist
+
+    - name: Download macOS artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: executable-macos-latest
+        path: ./dist
+
+    - name: Download Windows artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: executable-windows-latest
+        path: ./dist
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      with:
+        tag_name: ${{ github.event.inputs.release_version }}
+        release_name: ${{ github.event.inputs.release_version }}
+        draft: false
+        prerelease: false
+        generate_release_notes: true
+
+    - name: Upload Linux executable to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+        asset_name: vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+        asset_content_type: application/octet-stream
+
+    - name: Upload macOS executable to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+        asset_name: vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+        asset_content_type: application/octet-stream
+
+    - name: Upload Windows executable to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}.exe
+        asset_name: vigilant-${{ matrix.os }//latest/}-${{ github.sha }}.exe
+        asset_content_type: application/octet-stream
