--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -38,17 +38,19 @@ jobs:
         pyinstaller --onefile main.py -n vigilant
 
     - name: Archive executable
-      if: runner.os == 'Windows'
       run: |
-        mv dist/vigilant.exe dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}.exe
-      else:
-        mv dist/vigilant dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+        os=${{ matrix.os }}
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+          mv dist/vigilant.exe dist/vigilant-${{ matrix.os }}-${{ github.sha }}.exe
+        else
+          mv dist/vigilant dist/vigilant-${{ matrix.os }}-${{ github.sha }}
+        fi
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: executable-${{ matrix.os }}
-        path: dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}*
+        path: dist/vigilant-${{ matrix.os }}-${{ github.sha }}*
 
   release:
     needs: build
@@ -89,22 +91,22 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
-        asset_name: vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+        asset_path: ./dist/vigilant-${{ matrix.os }}-${{ github.sha }}
+        asset_name: vigilant-${{ matrix.os }}-${{ github.sha }}
         asset_content_type: application/octet-stream
 
     - name: Upload macOS executable to Release
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
-        asset_name: vigilant-${{ matrix.os }//latest/}-${{ github.sha }}
+        asset_path: ./dist/vigilant-${{ matrix.os }}-${{ github.sha }}
+        asset_name: vigilant-${{ matrix.os }}-${{ github.sha }}
         asset_content_type: application/octet-stream
 
     - name: Upload Windows executable to Release
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-${{ matrix.os }//latest/}-${{ github.sha }}.exe
-        asset_name: vigilant-${{ matrix.os }//latest/}-${{ github.sha }}.exe
+        asset_path: ./dist/vigilant-${{ matrix.os }}-${{ github.sha }}.exe
+        asset_name: vigilant-${{ matrix.os }}-${{ github.sha }}.exe
         asset_content_type: application/octet-stream
