--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -89,6 +89,7 @@ jobs:
         draft: false
         prerelease: false
         generate_release_notes: true
+        overwrite: true
 
     - name: Upload Linux executable to Release
       uses: actions/upload-release-asset@v1
