--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -87,9 +87,16 @@ jobs:
         tag_name: ${{ github.event.inputs.release_version }}
         release_name: ${{ github.event.inputs.release_version }}
         draft: false
-        prerelease: false
+        prerelease: true
         generate_release_notes: true
         overwrite: true
+        body: |
+        Pre-release versions are not consistent between tags. This is just used 
+        as a way to automatically package the game as executables for different 
+        operating systems. Each executable version is suffixed with its github
+        commit hash to identify versions. Pre-releases might be overwritten with
+        newer versions (differentiable by the github commit hash in the file 
+        name).
 
     - name: Upload Linux executable to Release
       uses: actions/upload-release-asset@v1
