--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Run PyInstaller
       run: |
-        pyinstaller --onefile main.py -n vigilant
+        pyinstaller -n vigilant main.spec
 
     - name: Rename executable for Windows
       if: runner.os == 'Windows'
