--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -88,7 +88,7 @@ jobs:
         tag_name: ${{ github.event.inputs.release_version }}
         release_name: ${{ github.event.inputs.release_version }}
         draft: false
-        prerelease: true
+        prerelease: false
         generate_release_notes: true
         overwrite: true
         body: |
