--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -92,12 +92,9 @@ jobs:
         generate_release_notes: true
         overwrite: true
         body: |
-          Pre-release versions are not consistent between tags. This is just used 
+          Pre-release versions are not consistent between tags. This is used 
           as a way to automatically package the game as executables for different 
-          operating systems. Each executable version is suffixed with its github
-          commit hash to identify versions. Pre-releases might be overwritten with
-          newer versions (differentiable by the github commit hash in the file 
-          name).
+          operating systems.
 
     - name: Upload Linux executable to Release
       uses: actions/upload-release-asset@v1
@@ -105,8 +102,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-ubuntu-latest-${{ github.sha }}
-        asset_name: vigilant-ubuntu-latest-${{ github.sha }}
+        asset_path: ./dist/vigilant-ubuntu-latest
+        asset_name: vigilant-ubuntu-latest
         asset_content_type: application/octet-stream
 
     - name: Upload macOS executable to Release
@@ -115,8 +112,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-macos-latest-${{ github.sha }}
-        asset_name: vigilant-macos-latest-${{ github.sha }}
+        asset_path: ./dist/vigilant-macos-latest
+        asset_name: vigilant-macos-latest
         asset_content_type: application/octet-stream
 
     - name: Upload Windows executable to Release
@@ -125,6 +122,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-windows-latest-${{ github.sha }}.exe
-        asset_name: vigilant-windows-latest-${{ github.sha }}.exe
+        asset_path: ./dist/vigilant-windows-latest.exe
+        asset_name: vigilant-windows-latest.exe
         asset_content_type: application/octet-stream
