--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -10,7 +10,7 @@ on:
       release_version:
         description: 'Release version (e.g., v1.0.0)'
         required: true
-        default: 'v0.0.2-alpha'
+        default: 'v0.0.1-alpha'
 
 jobs:
   build:
@@ -40,19 +40,19 @@ jobs:
     - name: Rename executable for Windows
       if: runner.os == 'Windows'
       run: |
-        Rename-Item -Path dist/vigilant.exe -NewName vigilant-${{ matrix.os }}.exe
+        Rename-Item -Path dist/vigilant.exe -NewName vigilant-${{ matrix.os }}-${{ github.sha }}.exe
 
     - name: Rename executable for macOS and Linux
       if: runner.os != 'Windows'
       run: |
         chmod +x dist/vigilant
-        mv dist/vigilant dist/vigilant-${{ matrix.os }}
+        mv dist/vigilant dist/vigilant-${{ matrix.os }}-${{ github.sha }}
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: executable-${{ matrix.os }}
-        path: dist/vigilant-${{ matrix.os }}*
+        path: dist/vigilant-${{ matrix.os }}-${{ github.sha }}*
 
   release:
     needs: build
@@ -92,9 +92,12 @@ jobs:
         generate_release_notes: true
         overwrite: true
         body: |
-          Pre-release versions are not consistent between tags. This is used 
+          Pre-release versions are not consistent between tags. This is just used 
           as a way to automatically package the game as executables for different 
-          operating systems.
+          operating systems. Each executable version is suffixed with its github
+          commit hash to identify versions. Pre-releases might be overwritten with
+          newer versions (differentiable by the github commit hash in the file 
+          name).
 
     - name: Upload Linux executable to Release
       uses: actions/upload-release-asset@v1
@@ -102,8 +105,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-ubuntu-latest
-        asset_name: vigilant-ubuntu-latest
+        asset_path: ./dist/vigilant-ubuntu-latest-${{ github.sha }}
+        asset_name: vigilant-ubuntu-latest-${{ github.sha }}
         asset_content_type: application/octet-stream
 
     - name: Upload macOS executable to Release
@@ -112,8 +115,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-macos-latest
-        asset_name: vigilant-macos-latest
+        asset_path: ./dist/vigilant-macos-latest-${{ github.sha }}
+        asset_name: vigilant-macos-latest-${{ github.sha }}
         asset_content_type: application/octet-stream
 
     - name: Upload Windows executable to Release
@@ -122,6 +125,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-windows-latest.exe
-        asset_name: vigilant-windows-latest.exe
+        asset_path: ./dist/vigilant-windows-latest-${{ github.sha }}.exe
+        asset_name: vigilant-windows-latest-${{ github.sha }}.exe
         asset_content_type: application/octet-stream
