--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -10,7 +10,7 @@ on:
       release_version:
         description: 'Release version (e.g., v1.0.0)'
         required: true
-        default: 'v0.0.1-alpha'
+        default: 'v0.0.2-alpha'
 
 jobs:
   build:
@@ -40,19 +40,19 @@ jobs:
     - name: Rename executable for Windows
       if: runner.os == 'Windows'
       run: |
-        Rename-Item -Path dist/vigilant.exe -NewName vigilant-${{ matrix.os }}-${{ github.sha }}.exe
+        Rename-Item -Path dist/vigilant.exe -NewName vigilant-${{ matrix.os }}.exe
 
     - name: Rename executable for macOS and Linux
       if: runner.os != 'Windows'
       run: |
         chmod +x dist/vigilant
-        mv dist/vigilant dist/vigilant-${{ matrix.os }}-${{ github.sha }}
+        mv dist/vigilant dist/vigilant-${{ matrix.os }}
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: executable-${{ matrix.os }}
-        path: dist/vigilant-${{ matrix.os }}-${{ github.sha }}*
+        path: dist/vigilant-${{ matrix.os }}*
 
   release:
     needs: build
@@ -105,8 +105,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-ubuntu-latest-${{ github.sha }}
-        asset_name: vigilant-ubuntu-latest-${{ github.sha }}
+        asset_path: ./dist/vigilant-ubuntu-latest
+        asset_name: vigilant-ubuntu-latest
         asset_content_type: application/octet-stream
 
     - name: Upload macOS executable to Release
@@ -115,8 +115,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-macos-latest-${{ github.sha }}
-        asset_name: vigilant-macos-latest-${{ github.sha }}
+        asset_path: ./dist/vigilant-macos-latest
+        asset_name: vigilant-macos-latest
         asset_content_type: application/octet-stream
 
     - name: Upload Windows executable to Release
@@ -125,6 +125,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/vigilant-windows-latest-${{ github.sha }}.exe
-        asset_name: vigilant-windows-latest-${{ github.sha }}.exe
+        asset_path: ./dist/vigilant-windows-latest.exe
+        asset_name: vigilant-windows-latest.exe
         asset_content_type: application/octet-stream
